<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.srinivas.brideandgroom.activities.RegisterActivity">

<EditText
    android:id="@+id/etName"
    android:layout_width="360dp"
    android:layout_height="54dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:hint="@string/name"
    android:inputType="textPersonName"
    android:visibility="visible"
    tools:layout_editor_absoluteX="11dp"
    tools:layout_editor_absoluteY="4dp" />

<EditText
    android:id="@+id/etUsername"
    android:layout_width="357dp"
    android:layout_height="57dp"
    android:ems="10"
    android:hint="@string/username"
    android:inputType="textPersonName"
    tools:layout_editor_absoluteX="11dp"
    tools:layout_editor_absoluteY="73dp"
    android:layout_below="@+id/etName"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="21dp" />

<EditText
    android:id="@+id/etPassword"
    android:layout_width="367dp"
    android:layout_height="61dp"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"
    tools:layout_editor_absoluteX="9dp"
    tools:layout_editor_absoluteY="150dp"
    android:layout_above="@+id/etAge"
    android:layout_alignRight="@+id/etAge"
    android:layout_alignEnd="@+id/etAge"
    android:layout_marginBottom="13dp" />

<EditText
    android:id="@+id/etAge"
    android:layout_width="368dp"
    android:layout_height="56dp"
    android:ems="10"
    android:hint="@string/age"
    android:inputType="number"
    tools:layout_editor_absoluteX="11dp"
    tools:layout_editor_absoluteY="234dp"
    android:layout_centerVertical="true"
    android:layout_alignRight="@+id/etUsername"
    android:layout_alignEnd="@+id/etUsername" />

<Button
    android:id="@+id/bRegister"
    android:layout_width="162dp"
    android:layout_height="58dp"
    android:text="@string/register"
    tools:layout_editor_absoluteX="85dp"
    tools:layout_editor_absoluteY="308dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="150dp" />

</RelativeLayout>

